--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@babel/core": "7.6.4",
         "@babel/preset-env": "7.6.3",
         "@babel/register": "7.6.2",
+        "@commitlint/cli": "8.2.0",
         "cz-conventional-changelog": "3.0.2",
         "del": "5.1.0",
         "gulp": "4.0.2",
@@ -32,7 +33,13 @@
         "gulp-image": "5.1.0",
         "gulp-sass": "4.0.2",
         "gulp-webserver": "0.9.1",
+        "husky": "3.0.9",
         "node-sass": "4.12.0"
+    },
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
     },
     "config": {
         "commitizen": {
