--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "gulp-htmlmin": "5.0.1",
         "gulp-image": "5.1.0",
         "gulp-sass": "4.0.2",
-        "gulp-webserver": "0.9.1",
+        "gulp-connect": "5.7.0",
         "husky": "3.0.9",
         "node-sass": "4.12.0"
     },
