chore(.stylelintrc): update indentation to 4

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
     "rules": {
         "scss/at-extend-no-missing-placeholder": true,
         "max-nesting-depth": 2,
+        "indentation": 4,
         "declaration-property-value-blacklist": {
             "/^border/": 0
         }
