--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,11 +2,12 @@
     "extends": "stylelint-config-sass-guidelines",
     "rules": {
         "scss/at-extend-no-missing-placeholder": true,
-        "max-nesting-depth": 4,
+        "max-nesting-depth": 5,
         "indentation": 4,
         "declaration-property-value-blacklist": {
             "/^border/": 0
         },
-        "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$"
+        "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
+        "selector-no-qualifying-type": null
     }
 }
